# scfc-gn

./: .gitignore  README.md  pyproject.toml
configs/: app.yaml
src/scfc-gcn/corr/: corr.py
src/scfc-gcn/networks/: gcn_model.py
src/scfc-gcn/ucla/: load_data.py
src/scfc-gn/: cli.py
src/scfc-gn/corr/: compute.py  mutual_information.py
src/scfc-gn/data/: pyg_dataset.py
src/scfc-gn/graph/: config.py
src/scfc-gn/ucla/: matrices.py  models.py  utils.py
src/scfc-gn/viz/: boxplot.py
src/scfc_gn/: cli.py  config.py
src/scfc_gn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scfc_gn/corr/: compute.py  corr.py  mutual_information.py
src/scfc_gn/data/: dataset.py  pyg_dataset.py
src/scfc_gn/graph/: config.py  convert_to_data.py
src/scfc_gn/networks/: gcn_model.py
src/scfc_gn/train/: baseline.py  eval.py  history.py  loop.py  test.py
src/scfc_gn/ucla/: load_data.py  matrices.py  models.py  utils.py
src/scfc_gn/utils/: graph.py  logging.py
src/scfc_gn/viz/: boxplot.py  plot_history.py  plot_matrices.py
