[project]
name = "scfc-gn"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch-geometric",
    "numpy",
    "scipy",
    "h5py",
    "torch",
    "typer",
    "pyyaml",
    "matplotlib",
    "rich",
    "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
